[tool.poetry]
name = "python-litellm"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.1.1"
google-generativeai = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
